<resources xmlns:tools="http://schemas.android.com/tools">
    <string-array name="data_nama_tanah">
        <item>Tanah berpasir</item>
        <item>Tanah liat</item>
        <item>Tanah lempung</item>
    </string-array>

    <string-array name="data_deskripsi_tanah">
        <item>Ringan, hangat, kering, cenderung asam, dan rendah nutrisi. Tanah ini sering dikenal sebagai tanah ringan karena proporsi pasirnya yang tinggi dan sedikit liat (tanah liat lebih berat daripada pasir).</item>
        <item>Merupakan jenis tanah berat yang diuntungkan oleh unsur hara yang tinggi. Tanah liat tetap basah dan dingin di musim dingin dan mengering di musim panas.</item>
        <item>Merupakan campuran pasir, debu dan liat yang digabungkan untuk menghindari pengaruh negatif dari masing-masing jenis.</item>
    </string-array>

    <string-array name="data_urlPhoto">
        <item>https://i.ibb.co/2tQH3kN/tanah-pasir.jpg</item>
        <item>https://i.ibb.co/NyPrvvN/tanah-liat.jpg</item>
        <item>https://i.ibb.co/2q3xdCN/tanah-lempung.jpg</item>
    </string-array>

    <string name="app_name">NanamYuk</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_add">Tambah</string>
    <string name="title_setting">Pengaturan</string>
    <string name="blob">blob</string>
    <string name="tambah_tanaman">Tambah Tanaman</string>
    <string name="halo">Halo, Muhammad Irfan</string>
    <string name="name">Muhammad Irfan</string>
    <string name="date">Rabu, 25 Mei 2022</string>
    <string name="nama_bunga">Nama Bunga</string>
    <string name="nama_penanda">Nama Penanda</string>
    <string name="date_1">08.00, 12 April 2022</string>
    <string name="belum_siram">Belum Siram</string>
    <string name="sudah_siram">Penyiraman Selanjutnya</string>
    <string name="rekomendasi_tanaman">"Rekomendasi Tanaman</string>
    <string name="rekomendasi_tanaman_description">Anda akan diberikan rekomendasi yang cocok berdasarkan cuaca dan lingkungan tanah</string>
    <string name="atau">atau</string>
    <string name="pilih_tanaman">Pilih Tanaman</string>
    <string name="pilih_tanaman_description">Anda dapat memilih tanaman anda sendiri</string>
    <string name="lanjut">Lanjut</string>
    <string name="pilih_metode">Pilih Metode Tambah Tanaman</string>
    <string name="title_activity_tes">tes</string>
    <string name="error_name">Nama tidak boleh kosong</string>
    <string name="error_email">Format Email Tidak Sesuai</string>
    <string name="error_password">Password minimal 6 karakter</string>
    <string name="login">Login</string>
    <string name="login_msg">Silakan login untuk lanjut</string>
    <string name="login_msg_2">Sudah Punya Akun?</string>
    <string name="daftar_msg">Belum Punya Akun?</string>
    <string name="daftar">Daftar</string>
    <string name="daftar_msg_2">Daftar untuk membuat akun</string>
    <string name="email">Email Anda</string>
    <string name="password">Password Anda</string>
    <string name="nama_anda">Nama Anda</string>
    <string name="logout">Keluar Akun</string>
    <string name="cari">Cari Tanaman</string>
    <string name="penanda_msg">Masukkan Nama Penanda</string>
    <string name="pilih_msg">Silakan Pilih Tanaman</string>
    <string name="hasil">Hasil Rekomendasi Tanaman</string>
    <string name="button">button</string>
    <string name="penanda">Masukkan Nama Penanda</string>
    <string name="penanda_msg_2">Misal, Bayam Halaman Belakang</string>
    <string name="chekclist">chekclist</string>
    <string name="time_splash">1500</string>
    <string name="lihat_fitur_premium">Lihat Fitur Premium</string>
    <string name="tambah_tanaman_dahulu">Ingin menambah tanaman baru?</string>
    <string name="tambah_tanaman_home">Tambah tanaman</string>
    <string name="ingin_menambahkan_tanaman_klik_tombol_di_bawah_ini">Ingin menambahkan tanaman? Klik tombol di bawah ini</string>
    <string name="perlu_dipindahkan">Perlu dipindahkan</string>
    <string name="informasi_tombol">Informasi tombol</string>
    <string name="desc_water_btn">Ditekan saat sudah selesai menyiram tanaman.</string>
    <string name="desc_sun_btn">Ditekan jika tanaman perlu dipindahkan ke tempat yang lebih cerah dan hangat.</string>
    <string name="desc_cloud_btn">Ditekan jika tanaman perlu dipindahkan ke tempat yang lebih teduh dan sejuk.</string>
    <string name="desc_check_btn">Tanda bahwa tanaman telah selesai disiram.</string>
    <string name="logout_tittle">Keluar dari akun</string>
    <string name="logout_supporting_text">Apakah anda yakin ingin keluar akun?</string>
    <string name="delete_tittle">Hapus tanaman</string>
    <string name="delete_supporting_text">Apakah anda yakin ingin menghapus tanaman?</string>
    <string name="add_tittle">Tambah tanaman</string>
    <string name="add_supporting_text">Apakah anda yakin ingin menambah tanaman?</string>
    <string name="water_tittle">Konfirmasi penyiraman tanaman</string>
    <string name="water_supporting_text">Apakah anda yakin ingin mengonfirmasi penyiraman tanaman?</string>
    <string name="move_tittle">Konfirmasi pemindahan tanaman</string>
    <string name="move_supporting_text">Apakah anda yakin ingin mengonfirmasi pemindahan tanaman?</string>
    <string name="iya">Iya</string>
    <string name="batal">Batal</string>
</resources>