<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.add.AddFragment">

    <TextView
        android:id="@+id/tv_tambah"
        style="@style/text.medium"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/pilih_metode"
        android:textColor="@color/text_main"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rgMethod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/rbRecom"
            style="@style/text.header"
            android:layout_width="match_parent"
            android:background="@drawable/radio_selector"
            android:button="@android:color/transparent"
            android:minHeight="48dp"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:textSize="16sp"
            android:gravity="left|center_vertical"
            android:text="@string/rekomendasi_tanaman" />

        <TextView
            style="@style/text.subheader"
            android:layout_width="match_parent"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="24dp"
            android:paddingHorizontal="16dp"
            android:text="@string/rekomendasi_tanaman_description"
            android:textColor="@color/text_secondary" />

        <Button
            android:id="@+id/rbChoice"
            style="@style/text.header"
            android:layout_width="match_parent"
            android:background="@drawable/radio_selector"
            android:button="@android:color/transparent"
            android:minHeight="48dp"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:textSize="16sp"
            android:gravity="left|center_vertical"
            android:text="@string/pilih_tanaman" />

        <TextView
            style="@style/text.subheader"
            android:layout_marginTop="2dp"
            android:paddingHorizontal="16dp"
            android:text="@string/pilih_tanaman_description"
            android:textColor="@color/text_secondary" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>