<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/bg_main"
        app:cardCornerRadius="10dp"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/tv_info"
                style="@style/text.header"
                android:text="@string/informasi_tombol"
                android:textColor="@color/text_main"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/btn_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_close_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_info" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_water_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/button"
                android:elevation="10dp"
                android:src="@drawable/ic_water"
                app:borderWidth="0dp"
                app:layout_constraintStart_toStartOf="@+id/tv_info"
                app:layout_constraintTop_toBottomOf="@+id/tv_info" />

            <TextView
                android:id="@+id/tv_water"
                style="@style/text.description"
                android:layout_marginStart="12dp"
                android:text="@string/desc_water_btn"
                android:textColor="@color/text_main"
                app:layout_constraintBottom_toBottomOf="@+id/btn_water_info"
                app:layout_constraintStart_toEndOf="@+id/btn_water_info"
                app:layout_constraintTop_toTopOf="@+id/btn_water_info" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_sun_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/button"
                android:elevation="10dp"
                android:src="@drawable/ic_sun"
                app:borderWidth="0dp"
                app:layout_constraintStart_toStartOf="@+id/btn_water_info"
                app:layout_constraintTop_toBottomOf="@+id/btn_water_info" />

            <TextView
                android:id="@+id/tv_sun"
                style="@style/text.description"
                android:layout_marginStart="12dp"
                android:text="@string/desc_sun_btn"
                android:textColor="@color/text_main"
                app:layout_constraintBottom_toBottomOf="@+id/btn_sun_info"
                app:layout_constraintStart_toEndOf="@+id/btn_sun_info"
                app:layout_constraintTop_toTopOf="@+id/btn_sun_info" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_cloud_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/button"
                android:elevation="10dp"
                android:src="@drawable/ic_cloud"
                app:borderWidth="0dp"
                app:layout_constraintStart_toStartOf="@+id/btn_sun_info"
                app:layout_constraintTop_toBottomOf="@+id/btn_sun_info" />

            <TextView
                android:id="@+id/tv_cloud"
                style="@style/text.description"
                android:layout_marginStart="12dp"
                android:text="@string/desc_cloud_btn"
                android:textColor="@color/text_main"
                app:layout_constraintBottom_toBottomOf="@+id/btn_cloud_info"
                app:layout_constraintStart_toEndOf="@+id/btn_cloud_info"
                app:layout_constraintTop_toTopOf="@+id/btn_cloud_info" />

            <ImageView
                android:id="@+id/check_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="12dp"
                android:contentDescription="@string/chekclist"
                android:src="@drawable/ic_baseline_check_36"
                app:layout_constraintStart_toStartOf="@+id/btn_cloud_info"
                app:layout_constraintTop_toBottomOf="@+id/btn_cloud_info" />

            <TextView
                android:id="@+id/tv_check"
                style="@style/text.description"
                android:layout_marginStart="12dp"
                android:text="@string/desc_check_btn"
                android:textColor="@color/text_main"
                app:layout_constraintBottom_toBottomOf="@+id/check_info"
                app:layout_constraintStart_toEndOf="@+id/check_info"
                app:layout_constraintTop_toTopOf="@+id/check_info" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>