<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.dash.DashFragment">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginTop="90dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.62"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_url="https://assets7.lottiefiles.com/packages/lf20_juote5w5.json" />

        <TextView
            android:id="@+id/tv_no_plant"
            style="@style/text.header"
            android:layout_marginTop="-60dp"
            android:text="@string/tambah_tanaman_dahulu"
            android:textColor="@color/accent_main"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/animationView3" />

        <Button
            android:id="@+id/add_button_home"
            style="@style/text.title"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_next"
            android:drawableStart="@drawable/ic_baseline_add_circle_24"
            android:elevation="10dp"
            android:padding="14dp"
            android:text="@string/tambah_tanaman_home"
            android:visibility="gone"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/tv_no_plant"
            app:layout_constraintStart_toStartOf="@+id/tv_no_plant"
            app:layout_constraintTop_toBottomOf="@+id/tv_no_plant" />

        <TextView
            android:id="@+id/tv_halo"
            style="@style/text.medium"
            android:layout_width="match_parent"
            android:layout_margin="24dp"
            android:text="@string/halo"
            android:textColor="@color/text_main"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_date"
            style="@style/text.subheader"
            android:layout_marginStart="24dp"
            android:layout_marginTop="2dp"
            android:text="@string/date"
            android:textColor="@color/text_secondary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_halo"
            tools:ignore="TextContrastCheck" />

<!--        <Button-->
<!--            android:id="@+id/btn_premium"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="48dp"-->
<!--            android:layout_marginEnd="24dp"-->
<!--            android:background="@color/bg_secondary"-->
<!--            android:paddingHorizontal="8dp"-->
<!--            android:text="@string/lihat_fitur_premium"-->
<!--            android:textAllCaps="false"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/tv_date" />-->

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView4"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/tv_status_yes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_status_no"
            app:layout_constraintVertical_bias="0.122"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_url="https://assets4.lottiefiles.com/private_files/lf30_yo2zavgg.json" />

        <TextView
            android:id="@+id/tv_status_no"
            style="@style/text.header"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/belum_siram"
            android:textColor="@color/text_main"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_date" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_not_finish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="150dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_status_no"/>

        <TextView
            android:id="@+id/tv_status_move"
            style="@style/text.header"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:text="@string/perlu_dipindahkan"
            android:textColor="@color/text_main"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_not_finish" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_need_move_dry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="8dp"
            android:minHeight="150dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_status_move" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_need_move_humid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:minHeight="150dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_need_move_dry" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView2"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/tv_status_yes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_status_move"
            app:layout_constraintVertical_bias="0.122"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_url="https://assets4.lottiefiles.com/private_files/lf30_yo2zavgg.json" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView1"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_status_yes"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_url="https://assets7.lottiefiles.com/private_files/lf30_j4v2bg0q.json" />

        <TextView
            android:id="@+id/tv_status_yes"
            style="@style/text.header"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:text="@string/sudah_siram"
            android:textColor="@color/text_main"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_need_move_humid" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_finish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="80dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_status_yes" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/accent_main"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/btn_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:src="@drawable/ic_baseline_info_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_status_no" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>